--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/yargs": "^15.0.5",
 		"prettier": "^2.1.0",
-		"typescript": "^4.0.2"
+		"typescript": "^4.0.2",
+		"yargs": "^15.4.1"
 	},
 	"devDependencies": {
 		"@types/node": "^14.6.0"
